// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`feature-masterchain should deploy to the workchain 1`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Deploy",
            "type": "text",
          },
          "bounce": true,
          "from": "kQBbjpCWk51tkYZGsmjT-XQUL0QGlxJD4fQHGbYhdCbwQlX-",
          "to": "kQDqgPk__-TnXde1ms8e6NSDs6wE0yCJ5EdhtnnIA_sp3bE-",
          "type": "internal",
          "value": 10000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 3696n,
      },
    ],
  },
]
`;

exports[`feature-masterchain should deploy to the workchain from masterchain when masterchain enabled 1`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Deploy",
            "type": "text",
          },
          "bounce": true,
          "from": "kf9bjpCWk51tkYZGsmjT-XQUL0QGlxJD4fQHGbYhdCbwQqq2",
          "to": "kQADnFw69A84asrBOY1ogQDV5Brk1QFgJF-_1kE9jXIe4RaM",
          "type": "internal",
          "value": 10000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 3618n,
      },
    ],
  },
]
`;

exports[`feature-masterchain should deploy to the workchain when masterchain enabled 1`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Deploy",
            "type": "text",
          },
          "bounce": true,
          "from": "kQBbjpCWk51tkYZGsmjT-XQUL0QGlxJD4fQHGbYhdCbwQlX-",
          "to": "kQADnFw69A84asrBOY1ogQDV5Brk1QFgJF-_1kE9jXIe4RaM",
          "type": "internal",
          "value": 10000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 3618n,
      },
    ],
  },
]
`;

exports[`feature-masterchain should not deploy to the workchain from masterchain 1`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Deploy",
            "type": "text",
          },
          "bounce": true,
          "from": "kf9bjpCWk51tkYZGsmjT-XQUL0QGlxJD4fQHGbYhdCbwQqq2",
          "to": "kQDqgPk__-TnXde1ms8e6NSDs6wE0yCJ5EdhtnnIA_sp3bE-",
          "type": "internal",
          "value": 10000000000n,
        },
      },
      {
        "$type": "failed",
        "errorCode": 137,
        "errorMessage": "Masterchain support is not enabled for this contract",
      },
      {
        "$type": "sent-bounced",
        "message": {
          "body": {
            "type": "empty",
          },
          "bounce": false,
          "from": "kQDqgPk__-TnXde1ms8e6NSDs6wE0yCJ5EdhtnnIA_sp3bE-",
          "to": "kf9bjpCWk51tkYZGsmjT-XQUL0QGlxJD4fQHGbYhdCbwQqq2",
          "type": "internal",
          "value": 9988839000n,
        },
      },
    ],
  },
]
`;
